--- a/app/template.html
+++ b/app/template.html
@@ -4,9 +4,12 @@
 <head>
   <meta charset='utf-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name='theme-color' content='#5f4b8b'> %sapper.base%
+  <meta name='theme-color' content='#5f4b8b'>
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="application-name" content="Scorekeeper">
 
-  <link rel="stylesheet" href="typeface-roboto-slab/index.css">
+  %sapper.base%
+
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="global.css">
   <link rel='manifest' href='manifest.json'>
