add lesson ended view

--- a/routes/_layout.html
+++ b/routes/_layout.html
@@ -1,34 +1,38 @@
 <main>
-  <svelte:component this={child.component} {...child.props} />
+  <svelte:component this="{child.component}" {...child.props} />
 </main>
 
 <style>
   main {
     width: 100%;
+    height: 100vh;
+    background: #222;
+    padding: 4rem;
+    margin: 0;
   }
 </style>
 
 <script>
-  import client from '../utils/feathers'
-  import store from '../utils/store.js'
+  import client from "../utils/feathers";
+  import store from "../utils/store.js";
 
   export default {
     store: () => store,
     oncreate() {
-      window.store = store
-      client.authenticate().catch({ login: null, user: null })
-      client.on('authenticated', this.authenticatedListener)
-      client.on('logout', this.logoutListener)
+      window.store = store;
+      client.authenticate().catch({ login: null, user: null });
+      client.on("authenticated", this.authenticatedListener);
+      client.on("logout", this.logoutListener);
     },
     methods: {
       async authenticatedListener(res) {
-        store.set({ login: res.accessToken })
-        const payload = await client.passport.verifyJWT(res.accessToken)
-        const user = await client.service('users').get(payload.userId)
-        store.set({ user })
+        store.set({ login: res.accessToken });
+        const payload = await client.passport.verifyJWT(res.accessToken);
+        const user = await client.service("users").get(payload.userId);
+        store.set({ user });
       },
       logoutListener() {
-        store.set({ user: null, login: null })
+        store.set({ user: null, login: null });
       }
     }
   };
