--- a/src/template.html
+++ b/src/template.html
@@ -3,15 +3,13 @@
 
 <head>
   <meta charset='utf-8'>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name='theme-color' content='#5f4b8b'>
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="application-name" content="Scorekeeper">
+  <meta name='viewport' content='width=device-width'>
+  <meta name='theme-color' content='#aa1e1e'>
 
   %sapper.base%
 
   <link rel="stylesheet" href="normalize.css">
-  <link rel="stylesheet" href="global.css">
+  <link rel='stylesheet' href='global.css'>
   <link rel='manifest' href='manifest.json'>
   <link rel='icon' type='image/png' href='favicon.png'>
 
